# compression-benchmark

./: .gitignore  BASE.c  BWT.c  CMakeLists.txt  DEFLATE.c  Huffman.c  LZ4.c  LZ77.c  LZF.c  LZMA2.c  LZO1.c  LZO1X-1.c  LZOmini.c  LZW12.c  LZW15.c  LZW9.c  README.md  RLE-LZ77-Huffman.c  RLE.c  Rice16.c  Rice32.c  Rice8.c  ShannonFano.c
bcl-1.2.0/src/: huffman.c  huffman.h  lz.c  lz.h  rice.c  rice.h  rle.h  shannonfano.c  shannonfano.h
lzo-2.09/: Makefile  config.status  libtool
lzo-2.09/examples/: dict  lzopack  overlap  precomp  precomp2  simple
lzo-2.09/lzotest/: lzotest
lzo-2.09/minilzo/: testmini
lzo-2.09/tests/: align  chksum  promote  sizes
xz-5.2.1/: Makefile  config.status  libtool
xz-5.2.1/debug/: Makefile
xz-5.2.1/lib/: Makefile
xz-5.2.1/po/: Makefile  Makefile.in
xz-5.2.1/src/: Makefile
xz-5.2.1/src/liblzma/: Makefile  liblzma.pc
xz-5.2.1/src/liblzma/api/: Makefile
xz-5.2.1/src/lzmainfo/: Makefile  lzmainfo
xz-5.2.1/src/scripts/: Makefile
xz-5.2.1/src/xz/: Makefile
xz-5.2.1/src/xzdec/: Makefile  lzmadec  xzdec
xz-5.2.1/src/xzdec/.libs/: lzmadec  xzdec
xz-5.2.1/tests/: Makefile
